CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created.
Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
16.12.2011:
 - fix units omitting first order in queue
 - add waypoint order markers + ton of fixes to waypointing and order queues

15.12.2011:
 - trim Map_tst3 background
 - fix units mixing orders
 - add order queues
 - fix RubberBand not showing up
 - added initial implementation for waypoint creation (needs fixes, but works)
 - (temporary, probably) orders are cancelled ONLY on "Stop" oder. All movement
   and firing actions are queued
 - add example scripting to Scenario_tst2 (2 units are given 3 orders each and perform
   them automatically on startup!)

14.12.2011:
 - add Map_tst3 and Scnario_tst3
 - add ability to stop following a unit on mobile (context menu "Follow" now toggles following)
 - add option to close scenario to OptionsMenu
 - optimise ScenarioMenu to use Loader instead of Scenario element
 - make group numbers always remain vertical
 - (sort of fix - issue is less apparent on Qt 4.8. Recompiled) pausing seems to be stopping animations only visually.
    It looks as if they still run in the background

13.12.2011:
 - add background to Scenario
 - update ScenarioMenu with some better visuals
 - rebuild zooming so that gameArea's dimensions stay the same, even on zoom less than 100%
   (background remains invisible throughout zooming)
 - fix TopMenu "hiding" plus sign on small screens
 - add pinch zooming
 - make "standard" zooming always center on screen center
 - center scenarios list in ScenarioMenu
 - fix roster status not adjusting size when a long status emerges

12.12.2011:
 - add ScenarioMenu
 - modify Scenario to be more dynamic (allow to instantiate empty Scenario)
 - add default hipsometric image (black)
 - add Scenario_tst2

11.12.2011:
 - modify RosterMenu and SoldierMenu to resize appropriately