@@ -7,6 +7,7 @@ Some more history can be devised from git sources (although even there, the thin
 16.12.2011:
  - fix units omitting first order in queue
  - add waypoint order markers + ton of fixes to waypointing and order queues
+ - add Quit button to ScenarioMenu
 
 15.12.2011:
  - trim Map_tst3 background
